--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -15,7 +15,28 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <title>ApplyLog | Home</title>
+    <style>
+      body{
+        font-family: 'Poppins', sans-serif;
+      }
+      h1 {
+        font-size: 3rem;
+        font-weight: 700;
+      }
+    
+      h2 {
+        font-size: 2rem;
+        font-weight: 600;
+      }
+    
+      p {
+        font-size: 1.1rem;
+        font-weight: 400;
+        line-height: 1.7;
+      }
+    </style>
   </head>
   <body>
     <!-- Navbar section (same for all pages) -->
@@ -44,7 +65,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="{% url 'aboutUs'%}">About</a>
             </li>
           </ul>
           {% if user.is_authenticated %}
@@ -71,7 +92,7 @@
     <!-- Default content that appears in base.html -->
 
     {% endblock %}
-    
+
     <!-- Footer -->
     <footer class="bg-black text-white py-4">
       <div class="container text-center">
