--- a/main/templates/basics/home.html
+++ b/main/templates/basics/home.html
@@ -63,6 +63,8 @@
   </div>
 </section>
 
+<hr class="my-0" style="border: none; border-top: 2px solid #333;">
+
 <!-- Features Section -->
 <section
   class="text-white d-flex align-items-center"
@@ -110,6 +112,8 @@
     </div>
   </div>
 </section>
+
+<hr class="my-0" style="border: none; border-top: 2px solid #333;">
 
 <!-- How It Works Section -->
 <section
