--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -158,8 +158,8 @@
             <li class="nav-item">
               <a
                 class="nav-link text-light"
-                href="{% url 'application_stats'%}"
-                >Stats</a
+                href="{% url 'document_library'%}"
+                >Documents</a
               >
             </li>
             {% endif %}
