--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -30,6 +30,8 @@
       href="https://fonts.googleapis.com/css2?family=_poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
 
     <title>ApplyLog | Home</title>
     <style>
@@ -156,9 +158,7 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link text-light"
-                href="{% url 'document_library'%}"
+              <a class="nav-link text-light" href="{% url 'document_library'%}"
                 >Documents</a
               >
             </li>
