--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -162,6 +162,11 @@
                 >Documents</a
               >
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" href="{% url 'wishlist'%}"
+                >Wishlist</a
+              >
+            </li>
             {% endif %}
             <li class="nav-item">
               <a class="nav-link text-light" href="{% url 'contact' %}"
